--- a/drivers/staging/zcache/Kconfig
+++ b/drivers/staging/zcache/Kconfig
@@ -1,5 +1,5 @@
 config ZCACHE
-	tristate "Dynamic compression of swap pages and clean pagecache pages"
+	bool "Dynamic compression of swap pages and clean pagecache pages"
 	depends on (CLEANCACHE || FRONTSWAP) && CRYPTO
 	select XVMALLOC
 	select CRYPTO_LZO
