DEFCONFIG: Update tuna defconfig.

--- a/arch/arm/configs/cyanogenmod_tuna_defconfig
+++ b/arch/arm/configs/cyanogenmod_tuna_defconfig
@@ -1248,9 +1248,7 @@ CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_BCMDHD=y
 CONFIG_BCMDHD_FW_PATH="/system/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
-# CONFIG_DHD_USE_STATIC_BUF is not set
-# CONFIG_DHD_USE_SCHED_SCAN is not set
-CONFIG_DHD_ENABLE_P2P=y
+# CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
@@ -1281,12 +1279,12 @@ CONFIG_PPP=y
 # CONFIG_PPP_FILTER is not set
 CONFIG_PPP_ASYNC=m
 # CONFIG_PPP_SYNC_TTY is not set
-CONFIG_PPP_DEFLATE=y
-CONFIG_PPP_BSDCOMP=y
-CONFIG_PPP_MPPE=y
+CONFIG_PPP_DEFLATE=m
+CONFIG_PPP_BSDCOMP=m
+CONFIG_PPP_MPPE=m
 # CONFIG_PPPOE is not set
-CONFIG_PPPOLAC=y
-CONFIG_PPPOPNS=y
+CONFIG_PPPOLAC=m
+CONFIG_PPPOPNS=m
 # CONFIG_SLIP is not set
 CONFIG_SLHC=y
 # CONFIG_NETCONSOLE is not set
@@ -1630,6 +1628,7 @@ CONFIG_TWL6030_MADC=y
 CONFIG_TWL6040_CODEC=y
 # CONFIG_MFD_STMPE is not set
 # CONFIG_MFD_TC3589X is not set
+# CONFIG_TWL6030_GPADC is not set
 # CONFIG_MFD_TMIO is not set
 # CONFIG_MFD_T7L66XB is not set
 # CONFIG_MFD_TC6387XB is not set
@@ -2259,7 +2258,7 @@ CONFIG_SNAPPY_COMPRESS=y
 CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
-CONFIG_ZRAM_NUM_DEVICES=3
+CONFIG_ZRAM_NUM_DEVICES=4
 CONFIG_ZRAM_DEFAULT_DISKSIZE=18874368
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_ZRAM_LZO is not set
