DEFCONFIG: Update tuna defconfig. Disable smartreflex class 3
Not sure how this got turned off even.

--- a/arch/arm/configs/cyanogenmod_tuna_defconfig
+++ b/arch/arm/configs/cyanogenmod_tuna_defconfig
@@ -76,6 +76,7 @@ CONFIG_PREEMPT_RCU=y
 # CONFIG_PREEMPT_COUNT_CPU is not set
 # CONFIG_RCU_TRACE is not set
 CONFIG_RCU_FANOUT=32
+CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
 CONFIG_RCU_BOOST=y
@@ -293,7 +294,7 @@ CONFIG_ARCH_OMAP2PLUS=y
 CONFIG_OMAP_RPMSG=y
 CONFIG_OMAP_RPMSG_RECOVERY=y
 CONFIG_OMAP_SMARTREFLEX=y
-CONFIG_OMAP_SMARTREFLEX_CLASS3=y
+# CONFIG_OMAP_SMARTREFLEX_CLASS3 is not set
 CONFIG_OMAP_SMARTREFLEX_CLASS1P5=y
 CONFIG_OMAP_SR_CLASS1P5_RECALIBRATION_DELAY=86400000
 CONFIG_OMAP_RESET_CLOCKS=y
@@ -333,8 +334,8 @@ CONFIG_MACH_TUNA=y
 CONFIG_OMAP_TPS6236X=y
 CONFIG_OMAP_ALLOW_OSWR=y
 # CONFIG_CPU_FREQ_SET_MIN_MAX is not set
-# CONFIG_CPU_OVERCLOCK is not set
-# CONFIG_GPU_OVERCLOCK is not set
+CONFIG_CPU_OVERCLOCK=y
+CONFIG_GPU_OVERCLOCK=y
 CONFIG_OMAP_FIQ_DEBUGGER=y
 CONFIG_OMAP4_PPA_CPU1_ONLINE_BUG=y
 CONFIG_OMAP4_HSOTG_ED_CORRECTION=y
