--- a/arch/arm/configs/cyanogenmod_tuna_defconfig
+++ b/arch/arm/configs/cyanogenmod_tuna_defconfig
@@ -338,7 +338,7 @@ CONFIG_GPU_OVERCLOCK=y
 CONFIG_OMAP_FIQ_DEBUGGER=y
 CONFIG_OMAP4_PPA_CPU1_ONLINE_BUG=y
 CONFIG_OMAP4_HSOTG_ED_CORRECTION=y
-CONFIG_FORCE_FAST_CHARGE=y
+# CONFIG_FORCE_FAST_CHARGE is not set
 
 #
 # System MMU
@@ -386,11 +386,11 @@ CONFIG_CPU_HAS_PMU=y
 # CONFIG_PL310_ERRATA_588369 is not set
 CONFIG_ARM_ERRATA_720789=y
 CONFIG_PL310_ERRATA_727915=y
-CONFIG_ARM_ERRATA_743622=y
-CONFIG_ARM_ERRATA_751472=y
+# CONFIG_ARM_ERRATA_743622 is not set
+# CONFIG_ARM_ERRATA_751472 is not set
 # CONFIG_ARM_ERRATA_753970 is not set
-CONFIG_ARM_ERRATA_754322=y
-CONFIG_ARM_ERRATA_754327=y
+# CONFIG_ARM_ERRATA_754322 is not set
+# CONFIG_ARM_ERRATA_754327 is not set
 CONFIG_ARM_GIC=y
 CONFIG_FIQ_GLUE=y
 CONFIG_FIQ_DEBUGGER=y
