--- a/arch/arm/configs/cyanogenmod_tuna_defconfig
+++ b/arch/arm/configs/cyanogenmod_tuna_defconfig
@@ -333,7 +333,9 @@ CONFIG_MACH_OMAP4_PANDA=y
 CONFIG_MACH_TUNA=y
 CONFIG_OMAP_TPS6236X=y
 CONFIG_OMAP_ALLOW_OSWR=y
-# CONFIG_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_CPU_FREQ_MAX=1200000
+CONFIG_CPU_FREQ_MIN=350000
 CONFIG_CPU_OVERCLOCK=y
 CONFIG_GPU_OVERCLOCK=y
 CONFIG_OMAP_FIQ_DEBUGGER=y
